redoing the work using base

--- a/index.html
+++ b/index.html
@@ -6,24 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
+    
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <div class="logo-section">
-                <img src="./assets/images/Logo.svg" alt="logo">
-                <p>mangcoding Store</p>
-            </div>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Course</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Article</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <div class="logs">
-                <button>Log in</button>
-                <button>Register</button>
+            <div class="row">
+                <div class="logo-section">
+                    <img src="./assets/images/Logo.svg" alt="logo">
+                    <a href="#">mangcoding Store</a>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="#" class="active">Home</a></li>
+                        <li><a href="#">Course</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Article</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>  
+                <div class="auth">
+                    <a href="#">Log in</a>
+                    <a href="#">Register</a>
+                </div>
             </div>
         </div>
     </header>
