--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="logo-section">
-                    <img src="./assets/images/Logo.svg" alt="logo">
+                    <img src="./assets/images/public/Logo.svg" alt="logo">
                     <a href="#">mangcoding Store</a>
                 </div>
                 <div class="nav">
@@ -32,5 +32,105 @@
             </div>
         </div>
     </header>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-start">
+                    <div class="logo">
+                        <img src="./assets/images/public/Logo-footer.svg"/>
+                        <a href="#">mangcoding Store</a>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor, erat sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
+                    <div class="icons">
+                        <a href="#">
+                            <img src="./assets/images/icons/facebook.svg" />
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/icons/linkedin.svg" />
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/icons/instagram.svg" />
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/icons/Twitter.svg" />
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-end">
+                    <div class="row">
+                        <div class="footer-item">
+                            <h2>Home</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">Product</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Course</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">About Us</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Log in</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="footer-item">
+                            <h2>Course</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">HTML & CSS</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Javascript</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Photographer</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Grafic design</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="footer-item">
+                            <h2>Article</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">New</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Old</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Trend</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Popular</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="footer-item">
+                            <h2>Contact Us</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">CCdoc123@gmail.com</a>
+                                    </li>
+                                    
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
