--- a/index.html
+++ b/index.html
@@ -32,7 +32,57 @@
             </div>
         </div>
     </header>
-
+    <main>
+        <section class="testimonials">
+            <h2>Testimonials</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="testimonial">
+                        <div class="user-info">
+                            <img src="./assets/images/users/user1.jpg" />
+                            <div class="user-data">
+                                <h3>Muntaser</h3>
+                                <span>Client</span>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                        </div>
+                        <blockquote>
+                            <q>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.
+                            </q>
+                        </blockquote>
+                    </div>
+                    <div class="testimonial">
+                        <div class="user-info">
+                            <img src="./assets/images/users/user1.jpg" />
+                            <div class="user-data">
+                                <h3>Muntaser</h3>
+                                <span>Client</span>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                            <img src="./assets/images/icons/Star 5.svg" />
+                        </div>
+                        <blockquote>
+                            <q>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus.
+                            </q>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
