--- a/index.html
+++ b/index.html
@@ -34,6 +34,48 @@
         </div>
     </header>
     <main>
+        <section class="courses">
+            <div class="container">
+                <div class="row">
+                    <div class="course-items">
+                        <div class="course-card">
+                            <img src="./assets/images/public/laptop.jpg">
+                            <div class="class-info">
+                                <span>Best Course</span>
+                                <span>$20 USD</span>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <img src="./assets/images/public/laptop.jpg">
+                            <div class="class-info">
+                                <span>Best Course</span>
+                                <span>$20 USD</span>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <img src="./assets/images/public/laptop.jpg">
+                            <div class="class-info">
+                                <span>Best Course</span>
+                                <span>$20 USD</span>
+                            </div>
+                        </div>
+                        <div class="course-card">
+                            <img src="./assets/images/public/laptop.jpg">
+                            <div class="class-info">
+                                <span>Best Course</span>
+                                <span>$20 USD</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course-description">
+                        <span>AVAILABLE FOR YOU</span>
+                        <h2>Available Courses</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                        <a href="#">See all</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="testimonials">
             <h2>Testimonials</h2>
             <div class="container">
