--- a/index.html
+++ b/index.html
@@ -34,38 +34,166 @@
         </div>
     </header>
     <main>
+        <section class="introduction">
+            <div class="container">
+                <div class="row">
+                    <div class="welcome">
+                        <span>Let's Begin</span>
+                        <h2>Let's Find The Right <span>Course</span> For You</h2>
+                        
+                    </div>
+                    <img src="./assets/images/public/welcome.png" alt="welcome to the website">
+                </div>
+            </div>
+        </section>
+        <section class="plans">
+            <div class="container">
+                    <div class="intro-video">
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</span>
+                        <div class="buttons">
+                            <a href="#" class="first-button">Register</a>
+                            <div class="play-video">
+                                <img src="./assets/images/icons/play-buttons.svg" alt="">
+                                <a href="#">Play Video</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="the-plans">
+                        <div class="row">
+                            <div class="plan-description">
+                                <span>WHAT WE GIVE</span>
+                                <h3>What do You Get From Us</h3>
+                                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</span>
+                            </div>
+                            <div class="plan-tickets">
+                                <div class="ticket">
+                                    <img src="./assets/images/icons/person-icon.svg" alt="">
+                                    <h3>Professional Teacher</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                                </div>
+                                <div class="ticket">
+                                    <img src="./assets/images/icons/person-icon.svg" alt="">
+                                    <h3>Professional Teacher</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                                </div>
+                                <div class="ticket">
+                                    <img src="./assets/images/icons/person-icon.svg" alt="">
+                                    <h3>Professional Teacher</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+            </div>
+
+        </section>
+        <section class="selected-courses">
+            <div class="container">
+                <div class="row">
+                    <img src="./assets/images/public/studying.png" alt="studying children">
+                    <div class="stats">
+                        <span>
+                            Selected Course
+                        </span>
+                        <h3>
+                            People Taking Courses
+                        </h3>
+                        <span>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.
+                        </span>
+                        <div class="numbered-stats">
+                            <div class="numbers">
+                                <span class="stat-numbers">6000</span>
+                                <span class="stat-numbers">4000</span>
+                                <span class="stat-numbers">100</span>
+                            </div>
+                            <div class="figures">
+                                <span id="details">People Views</span>
+                                <span>User</span>
+                                <span>Course</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="courses">
             <div class="container">
                 <div class="row">
                     <div class="course-items">
-                        <div class="course-card">
-                            <img src="./assets/images/public/laptop.jpg">
-                            <div class="class-info">
-                                <span>Best Course</span>
-                                <span>$20 USD</span>
+                            <div class="course-card">
+                                <img src="./assets/images/public/laptop.jpg">
+                                <div class="class-info">
+                                    <span>Best Course</span>
+                                    <span>$20 USD</span>
+                                </div>
+                                <div class="course-details">
+                                    <div class="row">
+                                        <h3>html & CSS</h3>
+                                        <span>1500 views</span>
+                                    </div>
+                                    <div class="row">
+                                        <span>120 videos</span>
+                                        <span>2 teachers</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="course-card">
-                            <img src="./assets/images/public/laptop.jpg">
-                            <div class="class-info">
-                                <span>Best Course</span>
-                                <span>$20 USD</span>
+
+                            <div class="course-card">
+                                <img src="./assets/images/public/laptop.jpg">
+                                <div class="class-info">
+                                    <span>Best Course</span>
+                                    <span>$20 USD</span>
+                                </div>
+                                <div class="course-details">
+                                    <div class="row">
+                                        <h3>html & CSS</h3>
+                                        <span>1500 views</span>
+                                    </div>
+                                    <div class="row">
+                                        <span>120 videos</span>
+                                        <span>2 teachers</span>
+                                    </div>
+                                </div>
                             </div>
+
+
+                            <div class="course-card">
+                                <img src="./assets/images/public/laptop.jpg">
+                                <div class="class-info">
+                                    <span>Best Course</span>
+                                    <span>$20 USD</span>
+                                </div>
+                                <div class="course-details">
+                                    <div class="row">
+                                        <h3>html & CSS</h3>
+                                        <span>1500 views</span>
+                                    </div>
+                                    <div class="row">
+                                        <span>120 videos</span>
+                                        <span>2 teachers</span>
+                                    </div>
+                                </div>
+
                         </div>
-                        <div class="course-card">
-                            <img src="./assets/images/public/laptop.jpg">
-                            <div class="class-info">
-                                <span>Best Course</span>
-                                <span>$20 USD</span>
+                            <div class="course-card">
+                                <img src="./assets/images/public/laptop.jpg">
+                                <div class="class-info">
+                                    <span>Best Course</span>
+                                    <span>$20 USD</span>
+                                </div>
+                                <div class="course-details">
+                                    <div class="row">
+                                        <h3>html & CSS</h3>
+                                        <span>1500 views</span>
+                                    </div>
+                                    <div class="row">
+                                        <span>120 videos</span>
+                                        <span>2 teachers</span>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="course-card">
-                            <img src="./assets/images/public/laptop.jpg">
-                            <div class="class-info">
-                                <span>Best Course</span>
-                                <span>$20 USD</span>
-                            </div>
-                        </div>
                     </div>
                     <div class="course-description">
                         <span>AVAILABLE FOR YOU</span>
